fix: sidebar background on mobile

--- a/app/static/css/mobile.scss
+++ b/app/static/css/mobile.scss
@@ -6,7 +6,7 @@ $breakpoint-tablet: 820px;
     left: 0;
     height: 100%;
     width: 0;
-    background-color: $background-light;
+    background-color: rgba($primary, 1);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 0.4em;
   }
